adapt version plugin maven in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+    <version>3.8.1</version> <!-- compatible avec Maven 3.5+ -->
 				<configuration>
 					<annotationProcessorPaths>
 						<path>
