--- a/pom.xml
+++ b/pom.xml
@@ -54,23 +54,30 @@
 	</dependencies>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <!-- Force version du plugin compatible avec Maven 3.5+ -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.10.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    
     <plugins>
-      <!-- Version du plugin compatible Maven 3.5+ -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
         <configuration>
-          <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <source>17</source>
+          <target>17</target>
         </configuration>
       </plugin>
 
-      <!-- Spring Boot Maven plugin si nécessaire -->
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
-        <version>3.2.1</version>
       </plugin>
     </plugins>
   </build>
